--- a/.github/workflows/中青看点阅读.yml
+++ b/.github/workflows/中青看点阅读.yml
@@ -16,6 +16,7 @@ jobs:
       YOUTH_READ3: ${{ secrets.YOUTH_READ3 }}
       YOUTH_READ4: ${{ secrets.YOUTH_READ4 }}
       YOUTH_READ5: ${{ secrets.YOUTH_READ5 }}
+      YOUTH_READ5: ${{ secrets.YOUTH_READ6 }}
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -66,3 +67,11 @@ jobs:
         env:
           YOUTH_READ: ${{ secrets.YOUTH_READ5 }}
           YOUTH_TIME: ${{ secrets.YOUTH_TIME }}
+          
+      - name: '运行 【中青看点阅读六】'
+        if: env.YOUTH_READ6
+        run: |
+          node Youth_Read.js
+        env:
+          YOUTH_READ: ${{ secrets.YOUTH_READ6 }}
+          YOUTH_TIME: ${{ secrets.YOUTH_TIME }}          
